--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,13 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        
+        <dependency>
+    <groupId>com.cloudinary</groupId>
+    <artifactId>cloudinary-http44</artifactId>
+    <version>1.31.0</version>
+</dependency>
+
 
         <!-- Testing -->
         <dependency>
